# ovpn-dco-win

./: .gitignore  .gitmodules  COPYRIGHT.MIT  Driver.cpp  Driver.h  PropertySheet.props  README.md  adapter.cpp  adapter.h  bufferpool.cpp  bufferpool.h  build_all.bat  build_all_nosdv.bat  clean.bat  control.cpp  control.h  crypto.cpp  crypto.h  makecabs.bat  mss.cpp  mss.h  netringiterator.h  ovpn-dco-autologger.reg  ovpn-dco-win.ddf  ovpn-dco-win.sln  ovpn-dco-win.vcxproj  ovpn-dco-win.vcxproj.filters  ovpn-dco-win.wprp  ovpn-dco.inf  ovpn-dco.rc  peer.cpp  peer.h  pktid.cpp  pktid.h  proto.h  rxqueue.cpp  rxqueue.h  socket.cpp  socket.h  timer.cpp  (+5 more)
.github/workflows/: msbuild.yml
CustomActions/: CustomAction.cs  CustomActions.csproj
CustomActions/Properties/: AssemblyInfo.cs
driverhelper/: buffers.cpp  buffers.h  driverhelper.vcxproj  driverhelper.vcxproj.filters  tracewpp.h
gui/: CMakeLists.txt  gui.cpp
msm/: .gitignore  build-release-msm.ps1  build.ps1  dllmain.c  installer.vcxproj  installer.vcxproj.filters  log.c  log.h  msi.c  ovpn-dco.wxs  sampleinstaller.wxs
nsis-installer/: ovpn-dco.nsi  wow.nsh
ovpn-cli/: ovpn-cli.vcxproj  ovpn-cli.vcxproj.filters  ovpn-dco-cli.cpp
uapi/: ovpn-dco.h
